# percell3

./: .gitignore  CLAUDE.md  LICENSE  README.md  compound-engineering.local.md  pyproject.toml
.beads/: metadata.json
.workflows/: nan-spike-results.md
tests/: conftest.py  test_nan_spike.py
todos/: 001-complete-p1-path-traversal-zarr-names.md  002-complete-p1-wrong-exception-condition.md  003-complete-p1-empty-list-sql-crash.md  005-complete-p2-opaque-get-cell-count.md  009-complete-p2-duplicated-code-patterns.md  011-complete-p3-add-channel-is-segmentation.md  012-complete-p3-inconsistent-optional-syntax.md  013-complete-p3-missing-repr.md  015-complete-p3-frozen-dataclasses.md  016-complete-p2-lazy-imports-startup-latency.md  017-pending-p2-menu-logic-duplication.md  018-pending-p2-redundant-error-handling-create.md  020-complete-p2-dead-unreachable-code.md  021-pending-p2-export-command-ux.md  022-pending-p3-query-output-format-dry.md  023-complete-p3-workflow-list-format.md  025-complete-p3-sanitize-error-messages.md  027-complete-p2-double-scan-interactive-import.md  030-complete-p3-parse-channel-maps-return-type.md  031-complete-p3-source-files-transient-docs.md  032-pending-p3-menu-export-missing-filters.md  033-complete-p1-cellpose4-api-break.md  034-complete-p1-private-conn-access.md  035-complete-p1-pickle-deserialization-warning.md  038-complete-p2-mutable-list-frozen-dataclass.md  039-complete-p2-cell-insert-performance.md  042-complete-p1-gpu-flag-silently-ignored.md  043-complete-p1-roi-import-writes-before-validation.md  044-complete-p1-bare-except-exception-engine.md  045-complete-p1-unvalidated-model-name-code-execution.md  046-complete-p2-segmentation-result-no-per-region-stats.md  047-complete-p2-sqlite-wal-synchronous-normal.md  049-complete-p3-misleading-lazy-import-and-getattr.md  053-complete-p3-segment-code-quality-cleanup.md  054-complete-p1-cellpose4-model-type-deprecated.md  060-complete-p2-display-check-misses-wayland.md  060-pending-p2-display-check-misses-wayland.md  062-pending-p2-double-label-materialization.md  063-complete-p2-viewer-object-type-annotation.md  063-pending-p2-viewer-object-type-annotation.md  (+109 more)
(+508 files in other folders)
